--- a/css/homepage-styles.css
+++ b/css/homepage-styles.css
@@ -2,7 +2,7 @@
 	margin-left:auto;
 	margin-right:auto;
 	background-color:#ffffff;
-	border:1px dotted green;
+	/*border:1px dotted green;*/
 	width:100%;
 	margin:auto;
 }
